[tool.poetry]
name = "pycardgolf"
version = "0.1.0"
description = ""
authors = ["Harrison Wilco <hwilco@gmail.com>"]
readme = "README.md"
packages = [{include = "pycardgolf", from = "src"}]

[tool.poetry.scripts]
pycardgolf = "pycardgolf.main:main"
pycardgolf-tui = "pycardgolf.interfaces.tui.tui_main:main"

[tool.poetry.dependencies]
python = "^3.13"
rich = "^14.3.3"
color-contrast = "^0.1.1"
textual = "^8.0.0"

[tool.pyrefly]
project-includes = [
    "src/**/*.py*",
    "**/*.ipynb",
]
search-roots = ["src"]
project-excludes = [
    "tests/**",
    "**/__pycache__/**",
    "scripts/*",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.14.8"
isort = "^7.0.0"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pyrefly = "^0.43.1"
pyright = "^1.1.408"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pytest.ini_options.markers]
slow = "mark test as slow (excluded from pre-commit testing)"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.isort]
    profile = "black"

[tool.ruff]
target-version = "py313"
exclude = ["scripts"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Missing trailing comma (can cause unexpected behavior with formatter)
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring (incompatible with D211)
    "D213",   # Multi-line docstring summary at second line (incompatible with D212)
    "EXE002", # Allow executable files for cross-platform compatibility
    "S311",   # Allow standard pseudo-random generators for game logic
    "TD",     # TODOs
    "FIX",    # Fixmes
    "FBT",    # Boolean trap
]

[tool.ruff.lint.per-file-ignores]
"src/pycardgolf/main.py" = [
    "T201",  # Allow print statements in main entry point
]
"src/pycardgolf/utils/deck.py" = [
    "SLF001", # Allow private member access for deck operations
]
"src/pycardgolf/interfaces/base.py" = [
    "ANN401", # Allow Any type in base interface methods if necessary
]
"src/pycardgolf/interfaces/tui/tui_main.py" = [
    "T201",  # Allow print statements in TUI entry point
]
"tests/*" = [
    "S101",    # Allow assert statements in tests
    "PLR2004", # Allow magic values in tests
    "ANN",     # Allow missing type annotations in tests
    "D",       # Allow missing docstrings in tests
    "SLF001",  # Allow private member access in tests
    "ARG002",  # Allow unused method arguments in tests
]

[tool.pyright]
include = ["src"]
executionEnvironments = [
  { root = "src" }
]
exclude = [
    "**/__pycache__",
    "scripts",
    "tests"
]
pythonVersion = "3.13"
typeCheckingMode = "standard" # Options: "off", "basic", "standard", "strict"
reportMissingTypeStubs = false

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.beta]
match = "beta"
prerelease = true
prerelease_token = "beta"
